--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ social-network-links:
   email: "jeancharles.mariani@iit.it"
   rss: true  # remove this line if you don't want to show an RSS link at the bottom
   github: JCMariani
-  twitter: @mariani_jc
+  twitter: mariani_jc
 #  medium: yourname
 #  reddit: yourname
 #  linkedin: daattali
