--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,8 @@ author: JC Mariani
 navbar-links:
   About Me: "aboutme"
   Publications: "publications"
+  Sections:
+  - Drawings: "drawings"
   #  Resources:
   #  - Beautiful Jekyll: "https://beautifuljekyll.com"
   #  - Learn markdown: "https://www.markdowntutorial.com/"
