--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,14 +1,14 @@
-- date: 1. April 2024
-  headline: Welcome Sanghun!
+- date: 01. August 2021
+  headline: My main PhD paper is out as [preprint](https://www.biorxiv.org/content/10.1101/2024.07.30.604249v1). ![image](https://JCMariani.github.io/images/newspic/ShotnoiseEditor.png)
 
-- date: 22. February 2024
-  headline: Our shot noise paper is an [Editors' Suggestion in PRL](https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.132.076001)!  ![image](/images/newspic/ShotnoiseEditor.png){:class="img-responsive"}
+- date: 28. June 2024
+  headline: Super happy to present our last results with Chiara Pepe on FC in anaesthetised mice at [fENS2024](https://fensforum.org/)!! Come pass by at [PS05-28AM-474](https://twitter.com/mariani_jc/status/1805252218494320818) on Friday.
 
-- date: 15. September 2023
-  headline: Welcome Thomas!
+- date: 19. June 2024
+  headline: Finally officially graduated from Universite Paris Cite... I have now the paper that goes with the PhD.
 
-- date: 1. November 2023
-  headline: All the best with your new position in Dresden Jacky!
+- date: 13. June 2024
+  headline: Extremely honoured to present "Advances in functional Connectivity Mapping" at the 9th Neuroengineering School Massimo Grattarola in Genova.
 
 - date: 1. September 2023
   headline: Welcome Yudai!
