--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - date: 01. August 2021
-  headline: My main PhD paper is out as [preprint](https://www.biorxiv.org/content/10.1101/2024.07.30.604249v1). ![image](https://JCMariani.github.io/images/newspic/ShotnoiseEditor.png)
+  headline: My main PhD paper is out as a [preprint](https://www.biorxiv.org/content/10.1101/2024.07.30.604249v1). ![image](https://JCMariani.github.io/assets/img/2024-08-01_BioRxiv_Opioids.png)
 
 - date: 28. June 2024
   headline: Super happy to present our last results with Chiara Pepe on FC in anaesthetised mice at [fENS2024](https://fensforum.org/)!! Come pass by at [PS05-28AM-474](https://twitter.com/mariani_jc/status/1805252218494320818) on Friday.
@@ -10,39 +10,6 @@
 - date: 13. June 2024
   headline: Extremely honoured to present "Advances in functional Connectivity Mapping" at the 9th Neuroengineering School Massimo Grattarola in Genova.
 
-- date: 1. September 2023
-  headline: Welcome Yudai!
+- date: 06. June 2024
+  headline: Presenting our results with Chiara Pepe at the ICTP Theoretical Neuroscience Workshop for young Scientists in Trieste. 
 
-- date: 22. June 2023
-  headline: Our Majorana-Noise paper is out! And Michelle wrote a [nice item](https://www.universiteitleiden.nl/en/news/2023/06/new-method-to-find-majoranas-tested-for-the-first-time) about it. 
-
-- date: 28. May 2023
-  headline: The [SuperC website](https://superc2033.com) is live! We are excited to be part of this journey.
-
-- date: 22. June 2023
-  headline: Jiasen's paper on noise in mesoscopic junctions is [on arXiv](https://arxiv.org/abs/2306.02397). 
-
-- date: 6. March 2023
-  headline: How does superconductivity break down with high doping? Our new [paper in Nature Materials](https://www.nature.com/articles/s41563-023-01497-1) shines some light on the issue.
-
-- date: 18. December 2022
-  headline: Willem defends his PhD. Contratulations! 
-
-- date: 23. May 2022
-  headline: "Two new papers on arXiv! One on [persistent gaps and non-mean-field breakdown of SC](https://arxiv.org/abs/2205.09740), and one on [shot-noise of individual (putative) Majorana modes](https://arxiv.org/abs/2205.10346)."
-
-- date: 17. March 2022
-  headline: "Milan wins an ERC CoG grant! See [Leiden news](https://www.universiteitleiden.nl/en/news/2022/03/understanding-superconductivity-comes-closer-with-major-erc-grant-for-milan-allan). <img src='/images/newspic/erclogo.png' class='img-responsive' style='max-width: 192px' />"
-
-- date: 29. October 2021
-  headline: "**Our new paper, on Cooper pairs above Tc, is published in [Science](https://www.science.org/doi/10.1126/science.abe3987)**.
-  See [SRON news](https://www.sron.nl/news/5169-elektronparen-blijven-stabiel-boven-kritische-temperatuur-supergeleiding), [TU Delft news](https://www.tudelft.nl/en/2021/eemcs/inexplicably-stable-electron-pairs-without-superconductivity), [Leiden news](https://www.universiteitleiden.nl/en/news/2021/10/new-quantum-liquid-discovered), [Physics World](https://physicsworld.com/a/cooper-pairs-spotted-above-critical-temperature-for-superconductivity/)."
-
-- date: 1. October 2021
-  headline: Maialen will join us within a collaboration with the <a href="http://www.ingmarswart.nl">Swart Lab</a> -- welcome Maialen!
-
-- date: 15. September 2021
-  headline: Amber will join us with Casimir-Nanofront PhD fellowship -- welcome Amber!
-
-- date: 28. June 2021
-  headline: Welcome Jinwon!
