--- a/_data/news.yml
+++ b/_data/news.yml
@@ -10,16 +10,16 @@
 
 - date: 19. June 2024
   headline: I finally graduated officially from Universite Paris Cite... I have now the paper that goes with the PhD.
-  image:
+  image: "![image](https://JCMariani.github.io/assets/img/JCM_2024_PhD-diploma.jpg)"
   extended: "The end of a long journey." 
 
 - date: 13. June 2024
   headline: Extremely honoured to present "Advances in functional Connectivity Mapping" at the 9th Neuroengineering School Massimo Grattarola in Genova.
-  image: 
+  image: "![image](https://JCMariani.github.io/assets/img/NEng_School_Grattarola.png)"
   extended: "Excellent class on Neuroengineering. It was great to discover once more this field a few years after my master at Imperial College. I felt priviledged to present the results of our lab among such renown scientists." 
 
 - date: 06. June 2024
-  headline: Presenting our results with Chiara Pepe at the ICTP Theoretical Neuroscience Workshop for young Scientists poster session in Trieste. 
-  image: 
+  headline: Presenting our results with Chiara Pepe at the ICTP Junior Scientists Workshop on Recent Advances in Theoretical Neuroscience poster session in Trieste. 
+  image: "![image](https://JCMariani.github.io/assets/img/ICTP_workshop.jpg)"
   extended: "Great week in Trieste with Dr. Daniel Gutierrez. I discovered a whole new field of research. I hope to meet this great comunity again in the next few years."
 
