--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - date: 01. August 2021
-  headline: My main PhD paper is out as a [preprint](https://www.biorxiv.org/content/10.1101/2024.07.30.604249v1).
+  headline: &nbsp;&nbsp;&nbsp;My main PhD paper is out as a [preprint](https://www.biorxiv.org/content/10.1101/2024.07.30.604249v1).
   image: "![image](https://JCMariani.github.io/assets/img/News_2024-08-01_BioRxiv_Opioids.png)"
   extended: "We investigated the fingerprint of opioids on awake, behaving mice FC. We demonstrate some static FC dysconnection, morphine injection inducing the apparition of two main anticorrelated super-synchronous networks: thalamo-cortical vs. thalamo-hippocampal. In addition we show that this pattern is explained by a rich spatio temporal reorganisation of brain aemodynamics. Finally we link this fingerprint to MOR activation and describe a two steps process, where injection initiates a fast, transient hyperemia concurrently with hyperlocomotor event; These first 10min are followed by a more gradual shift of FC which matches analgesia and phosphorylation of the receptor dynamics."
     
