--- a/_data/news.yml
+++ b/_data/news.yml
@@ -14,7 +14,7 @@
   extended: "The end of a long journey." 
 
 - date: 13. June 2024
-  headline: "&nbsp;&nbsp;&nbsp;Extremely honoured to give a talk on "Advances in functional Connectivity Mapping" at the 9th Neuroengineering School Massimo Grattarola in Genova."
+  headline: "&nbsp;&nbsp;&nbsp;Extremely honoured to give a talk on *Advances in functional Connectivity Mapping* at the *9th Neuroengineering School Massimo Grattarola* in Genova."
   image: "![image](https://JCMariani.github.io/assets/img/NEng_School_Grattarola.png)"
   extended: "Excellent class on Neuroengineering. It was great to discover once more this field a few years after my master at Imperial College. I felt priviledged to present the results of our lab among such renown scientists." 
 
